--- a/index.html
+++ b/index.html
@@ -1895,7 +1895,7 @@
                     </div>
                     
                     <div class="download-btn">
-                        <a href="#" class="btn btn-primary">
+                        <a href="https://github.com/RuhanShaikh123/RuhanShaikh.github.io/releases/download/V1.0/app-release.apk" class="btn btn-primary">
                             <i class="fas fa-download"></i> Download Now
                         </a>
                     </div>
@@ -2273,4 +2273,5 @@
         });
     </script>
 </body>
+
 </html>
