--- a/index.html
+++ b/index.html
@@ -2139,7 +2139,7 @@
             
             // Earnings counter animation
             const earningsCounter = document.getElementById('earnings-counter');
-            const targetEarnings = 180000;
+            const targetEarnings = 10000000;
             let currentEarnings = 0;
             const duration = 3000; // 3 seconds
             const increment = targetEarnings / (duration / 16); // 60fps
@@ -2276,6 +2276,7 @@
 </body>
 
 </html>
+
 
 
 
